--- a/json/json.cbp
+++ b/json/json.cbp
@@ -31,9 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="DiliverContext.hpp" />
 		<Unit filename="FileSystem.hpp" />
+		<Unit filename="GetChildren.cpp" />
+		<Unit filename="GetChildren.hpp" />
 		<Unit filename="JSON_TYPE.hpp" />
 		<Unit filename="JsonNode.hpp" />
+		<Unit filename="JsonParser.hpp" />
+		<Unit filename="MyException.hpp" />
 		<Unit filename="Serialization.hpp" />
 		<Unit filename="config.hpp" />
 		<Unit filename="source.cpp" />
